--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/png" href="/kweebec-manager-logo.png" />
+  <link rel="icon" type="image/png" href="/draveur-manager-logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Kweebec Manager - Gestionnaire de serveurs Hytale moderne et performant" />
-  <title>Kweebec Manager</title>
+  <meta name="description" content="Draveur Manager - Gestionnaire de serveurs Hytale moderne et performant" />
+  <title>Draveur Manager</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
